--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.10.2",
-    "@types/react": ">=16.14.8",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
-    "react": "^18.1.0",
-    "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.1.0",
-    "react-router-dom": "^6.3.0"
+    " react": "*",
+    "@popperjs/core": "2.11.5",
+    "@types/react": "18.0.12",
+    "axios": "0.27.2",
+    "bootstrap": "5.1.3",
+    "react": "18.2.0",
+    "react-bootstrap": "2.4.0",
+    "react-dom": "18.1.0",
+    "react-router-dom": "6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
