--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    " react": "*",
+    "@babel/core": "^7.0.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.8.7",
     "@popperjs/core": "2.11.5",
-    "@types/react": "18.0.12",
+    "@types/react": "18.0.15",
     "axios": "0.27.2",
     "bootstrap": "5.1.3",
+    "fbjs": "0.2.1",
+    "material-ui": "0.12.2",
     "react": "18.2.0",
     "react-bootstrap": "2.4.0",
-    "react-dom": "18.1.0",
-    "react-router-dom": "6.3.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.3.0",
+    "react-tap-event-plugin": "0.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
